Alteracao feita via VSC

--- a/javascript.html
+++ b/javascript.html
@@ -117,13 +117,9 @@
 
 <body>
 
-<<<<<<< HEAD
-   
 
-=======
-    <h1>--------------------- ALTERAÇÃO DIRETA NO GITHUB ------------------------ </h1>
-    
->>>>>>> origin/master
+   <h1>ALTERAÇÃO DIRETA NA BRANCH</h1>
+
     <div id="b" align="center" >
         <h1>CALCULADORA CAÇIO</h1>
 
